--- a/calc-web/src/main/webapp/WEB-INF/web.xml
+++ b/calc-web/src/main/webapp/WEB-INF/web.xml
@@ -14,8 +14,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:/applicationContext.xml
-			classpath:/applicationContext-persistence.xml
+			classpath:/applicationContext*.xml			
 		</param-value>
 	</context-param>
 	
