import trees into db calculation of tree incl probability

--- a/calc-web/pom.xml
+++ b/calc-web/pom.xml
@@ -23,6 +23,12 @@
 		<dependency>
 			<groupId>org.openforis</groupId>
 			<artifactId>calc-server</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
