updated dependencies after projects renaming

--- a/calc-webapp/pom.xml
+++ b/calc-webapp/pom.xml
@@ -22,7 +22,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.openforis</groupId>
-			<artifactId>calc-server</artifactId>
+			<artifactId>calc-web</artifactId>
 			<exclusions>
 				<exclusion>
 					<artifactId>servlet-api</artifactId>
