--- a/calc-load/src/main/resources/log4j.properties
+++ b/calc-load/src/main/resources/log4j.properties
@@ -6,6 +6,9 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
+log4j.logger.org.springframework=ERROR
+#log4j.logger.org.springframework.aop=ERROR
+#log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.jdbc.datasource=DEBUG
 #log4j.logger.org.openforis.collect.persistence=DEBUG
