Data import work in progress

--- a/calc-load/pom.xml
+++ b/calc-load/pom.xml
@@ -48,11 +48,11 @@
 					</execution>
 				</executions>
 				<dependencies>
-<!-- 					<dependency> -->
-<!-- 						<groupId>postgresql</groupId> -->
-<!-- 						<artifactId>postgresql</artifactId> -->
-<!-- 						<version>9.1-901.jdbc4</version> -->
-<!-- 					</dependency> -->
+					<dependency>
+						<groupId>postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>9.1-901.jdbc4</version>
+					</dependency>
 					<dependency>
 						<groupId>org.openforis.util</groupId>
 						<artifactId>build-utils</artifactId>
