--- a/calc-load/src/main/resources/log4j.properties
+++ b/calc-load/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-org.geotools.referencing.factory.epsg=ERROR
+log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 log4j.logger.org.springframework=ERROR
 #log4j.logger.org.springframework.aop=ERROR
 #log4j.logger.org.springframework.transaction=INFO
