--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -14,6 +14,7 @@
 
 	<properties>
 		<jooq-codegen.target.directory>${project.build.directory}/generated-sources/jooq</jooq-codegen.target.directory>
+		<jooq-codegen.target.packageName>org.openforis.calc.persistence.jooq</jooq-codegen.target.packageName>
 	</properties>
 		
 	<build>
@@ -54,7 +55,7 @@
 					<dependency>
 						<groupId>postgresql</groupId>
 						<artifactId>postgresql</artifactId>
-						<version>9.1-901.jdbc4</version>
+						<version>${postgres-driver.version}</version>
 					</dependency>
 				</dependencies>
 				<configuration>
@@ -90,7 +91,7 @@
 							<daos>false</daos>
 						</generate>
 						<target>
-							<packageName>org.openforis.calc.persistence.jooq</packageName>
+							<packageName>${jooq-codegen.target.packageName}</packageName>
 							<directory>${jooq-codegen.target.directory}</directory>
 						</target>
 					</generator>
