--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -6,6 +6,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
+log4j.logger.org.openforis.calc=INFO
 log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 log4j.logger.org.springframework=ERROR
 #log4j.logger.org.springframework=INFO
@@ -13,4 +14,3 @@ log4j.logger.org.springframework=ERROR
 #log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.jdbc.datasource=DEBUG
-#log4j.logger.org.openforis.collect.persistence=DEBUG
