--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,11 @@
 		      <artifactId>jsr250-api</artifactId>
 		      <version>1.0</version>
 		    </dependency>
+		    <dependency>
+		      <groupId>jcs</groupId>
+		      <artifactId>jcs</artifactId>
+		      <version>1.3</version>
+		    </dependency>
 			
 		</dependencies>
 	</dependencyManagement>
