--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>calc-core</module>
 		<module>calc-webapp</module>
 		<module>calc-server</module>
+		<module>calc-r</module>
 	</modules>
 
 	<properties>
