--- a/calc-webapp/pom.xml
+++ b/calc-webapp/pom.xml
@@ -31,6 +31,17 @@
 <!-- 				</exclusion> -->
 <!-- 			</exclusions> -->
 		</dependency>
-		
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>catalina</artifactId>
+			<version>6.0.36</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>coyote</artifactId>
+			<version>6.0.36</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
