--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -285,22 +285,23 @@
 	    </dependency>
 	    
 	    <!-- Pentaho Kettle Api -->
-		<dependency>
-			<groupId>pentaho-kettle</groupId>
-			<artifactId>kettle-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>pentaho-kettle</groupId>
-			<artifactId>kettle-db</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>pentaho-kettle</groupId>
-			<artifactId>kettle-engine</artifactId>
-		</dependency>
-		 <dependency>
-	    	<groupId>commons-vfs</groupId>
-			<artifactId>commons-vfs</artifactId>
-	 	 </dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>pentaho-kettle</groupId> -->
+<!-- 			<artifactId>kettle-core</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>pentaho-kettle</groupId> -->
+<!-- 			<artifactId>kettle-db</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>pentaho-kettle</groupId> -->
+<!-- 			<artifactId>kettle-engine</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		 <dependency> -->
+<!-- 	    	<groupId>commons-vfs</groupId> -->
+<!-- 			<artifactId>commons-vfs</artifactId> -->
+<!-- 	 	 </dependency> -->
+
 <!-- 	    <dependency> -->
 <!-- 	      <groupId>jcs</groupId> -->
 <!-- 	      <artifactId>jcs</artifactId> -->
@@ -314,5 +315,9 @@
 	  		<groupId>javax.xml.bind</groupId>
 	  		<artifactId>jaxb-api</artifactId>
 	  	</dependency>
+		<dependency>
+			<groupId>org.apache.ddlutils</groupId>
+			<artifactId>ddlutils</artifactId>
+		</dependency>
 	</dependencies>
 </project>
