--- a/pom.xml
+++ b/pom.xml
@@ -323,6 +323,11 @@
 		    	<artifactId>jaxb-api</artifactId>
 		    	<version>2.2.7</version>
 		    </dependency>
+		    <dependency>
+		    	<groupId>org.apache.ddlutils</groupId>
+		    	<artifactId>ddlutils</artifactId>
+		    	<version>1.0</version>
+		    </dependency>
 		</dependencies>
 	</dependencyManagement>
 
