--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -8,6 +8,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 log4j.logger.org.openforis.calc=INFO
 log4j.logger.org.openforis.calc.persistence=DEBUG
+log4j.logger.org.openforis.calc.importer=DEBUG
 
 log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 log4j.logger.org.springframework=ERROR
