Work on code generation from Mondrian schema

--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<jooq-codegen.target.directory>${project.build.directory}/generated-sources/jooq</jooq-codegen.target.directory>
 		<jooq-codegen.target.packageName>org.openforis.calc.persistence.jooq</jooq-codegen.target.packageName>
+		<jaxb-codegen.target.directory>${project.build.directory}/generated-sources/jaxb</jaxb-codegen.target.directory>
 	</properties>
 		
 	<build>
@@ -97,6 +98,26 @@
 					</generator>
 				</configuration>
 			</plugin>
+			<!-- Generate JAXB classes for Mondrian MDX Schema generation -->
+<!--     		<plugin> -->
+<!--                 <groupId>org.codehaus.mojo</groupId> -->
+<!--                 <artifactId>jaxb2-maven-plugin</artifactId> -->
+<!--                 <version>1.5</version> -->
+<!--                 <executions> -->
+<!--                     <execution> -->
+<!--                         <id>xjc</id> -->
+<!--                         <goals> -->
+<!--                             <goal>xjc</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
+<!--                 </executions> -->
+<!-- 				<configuration> -->
+<!--                    	<schemaFiles>mondrian.xsd</schemaFiles> -->
+<!--                     <packageName>org.openforis.calc.olap.schema.base</packageName>  -->
+<!--                    	<staleFile>${project.build.directory}/jaxb2/.schema1XjcStaleFlag</staleFile> -->
+<!--                    	<outputDirectory>${jaxb-codegen.target.directory}</outputDirectory> -->
+<!--                	</configuration>                         -->
+<!--             </plugin>		 -->
 <!-- 			<plugin> -->
 <!-- 				<groupId>org.apache.maven.plugins</groupId> -->
 <!-- 				<artifactId>maven-surefire-plugin</artifactId> -->
@@ -144,6 +165,7 @@
 						<configuration>
 							<sources>
 								<source>${jooq-codegen.target.directory}</source>
+								<source>${jaxb-codegen.target.directory}</source>
 							</sources>
 						</configuration>
 					</execution>
