--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
 		<postgres-driver.version>9.1-901-1.jdbc4</postgres-driver.version>
 		<jooq.version>2.6.0</jooq.version>
 		<collect.version>3.0-Alpha5-SNAPSHOT</collect.version>
-		<commons-vfs.version>2.0-20090205</commons-vfs.version>	
+		<commons-vfs.version>2.0-20090205</commons-vfs.version>
+		<mondrian.version>3.5.0</mondrian.version>	
 	</properties>
 
 <!-- 	<profiles> -->
@@ -239,27 +240,31 @@
 			</dependency>
 			
 			<!-- Pentaho -->
-			<dependency>
-				<groupId>pentaho-kettle</groupId>
-				<artifactId>kettle-core</artifactId>
-				<version>${kettle.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>pentaho-kettle</groupId>
-				<artifactId>kettle-db</artifactId>
-				<version>${kettle.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>pentaho-kettle</groupId>
-				<artifactId>kettle-engine</artifactId>
-				<version>${kettle.version}</version>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>pentaho-kettle</groupId> -->
+<!-- 				<artifactId>kettle-core</artifactId> -->
+<!-- 				<version>${kettle.version}</version> -->
+<!-- 			</dependency> -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>pentaho-kettle</groupId> -->
+<!-- 				<artifactId>kettle-db</artifactId> -->
+<!-- 				<version>${kettle.version}</version> -->
+<!-- 			</dependency> -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>pentaho-kettle</groupId> -->
+<!-- 				<artifactId>kettle-engine</artifactId> -->
+<!-- 				<version>${kettle.version}</version> -->
+<!-- 			</dependency> -->
 <!-- 			<dependency> -->
 <!-- 				<groupId>pentaho-kettle</groupId> -->
 <!-- 				<artifactId>kettle-gpload-plugin</artifactId> -->
 <!-- 				<version>${kettle.version}</version> -->
 <!-- 			</dependency> -->
-			
+			<dependency>
+				<groupId>pentaho</groupId>
+				<artifactId>mondrian</artifactId>
+				<version>${mondrian.version}</version>
+			</dependency>
 			<!-- Database -->
 			<dependency>
 				<groupId>postgresql</groupId>
