--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<postgres-driver.version>9.1-901-1.jdbc4</postgres-driver.version>
 		<jooq.version>2.6.0</jooq.version>
 		<collect.version>3.0-Alpha5-SNAPSHOT</collect.version>
-		<commons-vfs.version>2.0-20090205</commons-vfs.version>
+<!-- 		<commons-vfs.version>2.0-20090205</commons-vfs.version> -->
 		<mondrian.version>3.5.0</mondrian.version>	
 	</properties>
 
@@ -281,11 +281,11 @@
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.4</version>
 			</dependency>
-			<dependency>
-	    		<groupId>commons-vfs</groupId>
-				<artifactId>commons-vfs</artifactId>
-				<version>${commons-vfs.version}</version>
-	 	 	</dependency>
+<!-- 			<dependency> -->
+<!-- 	    		<groupId>commons-vfs</groupId> -->
+<!-- 				<artifactId>commons-vfs</artifactId> -->
+<!-- 				<version>${commons-vfs.version}</version> -->
+<!-- 	 	 	</dependency> -->
 			<dependency>
 				<groupId>org.jooq</groupId>
 				<artifactId>jooq</artifactId>
