ROLAP generation work in progress

--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -345,5 +345,10 @@
 			<groupId>pentaho</groupId>
 			<artifactId>mondrian</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.olap4j</groupId>
+			<artifactId>olap4j</artifactId>
+			<version>1.0.1.550</version>
+		</dependency>
 	</dependencies>
 </project>
