ROLAP generation work in progress

--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -10,6 +10,7 @@ log4j.logger.org.openforis.calc=INFO
 log4j.logger.org.openforis.calc.persistence=DEBUG
 log4j.logger.org.openforis.calc.importer=DEBUG
 
+log4j.logger.org.apache.ddlutils=WARN
 log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 log4j.logger.org.springframework=ERROR
 
