--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -236,6 +236,15 @@
 			<artifactId>collect-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.openforis.commons</groupId>
+			<artifactId>commons-collections</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openforis.commons</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
@@ -323,5 +332,6 @@
 			<artifactId>olap4j</artifactId>
 			<version>1.0.1.550</version>
 		</dependency>
+		
 	</dependencies>
 </project>
