Draft of variable types

--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -323,5 +323,10 @@
 			<artifactId>olap4j</artifactId>
 			<version>1.0.1.550</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jscience</groupId>
+			<artifactId>jscience</artifactId>
+			<version>4.3.1</version>
+		</dependency>		
 	</dependencies>
 </project>
