Starting DB persistence

--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -304,6 +304,11 @@
 	      <artifactId>jsr250-api</artifactId>
 	    </dependency>
 		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.ddlutils</groupId>
 			<artifactId>ddlutils</artifactId>
 		</dependency>
