moved workspace package to engne

--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -15,6 +15,9 @@ log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 log4j.logger.org.springframework=ERROR
 
 log4j.logger.org.jooq=INFO
+
+log4j.logger.org.hibernate.SQL = DEBUG
+
 #log4j.logger.org.springframework=INFO
 #log4j.logger.org.springframework.aop=ERROR
 #log4j.logger.org.springframework.transaction=INFO
