--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -369,5 +369,10 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>net.rforge</groupId>
+			<artifactId>jri</artifactId>
+			<version>0.5-5</version>
+		</dependency>
 	</dependencies>
 </project>
