--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -7,6 +7,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 log4j.logger.org.openforis.calc=INFO
+log4j.logger.org.openforis.calc.r=INFO
 log4j.logger.org.openforis.calc.persistence=DEBUG
 log4j.logger.org.openforis.calc.importer=DEBUG
 
@@ -14,7 +15,7 @@ log4j.logger.org.apache.ddlutils=WARN
 log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 log4j.logger.org.springframework=ERROR
 
-log4j.logger.org.jooq=INFO
+#log4j.logger.org.jooq=INFO
 
 log4j.logger.org.hibernate.SQL = DEBUG
 
