--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -6,18 +6,17 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-log4j.logger.org.openforis.calc=INFO
-log4j.logger.org.openforis.calc.r=INFO
-log4j.logger.org.openforis.calc.persistence=DEBUG
-log4j.logger.org.openforis.calc.importer=DEBUG
+log4j.logger.org.openforis.calc=DEBUG
+#log4j.logger.org.openforis.calc.r=INFO
+#log4j.logger.org.openforis.calc.persistence=DEBUG
+#log4j.logger.org.openforis.calc.importer=DEBUG
 
-log4j.logger.org.apache.ddlutils=WARN
-log4j.logger.org.geotools.referencing.factory.epsg=ERROR
+#log4j.logger.org.apache.ddlutils=WARN
+#log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 log4j.logger.org.springframework=ERROR
 
 #log4j.logger.org.jooq=INFO
-
-log4j.logger.org.hibernate.SQL = DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
 
 #log4j.logger.org.springframework=INFO
 #log4j.logger.org.springframework.aop=ERROR
