--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	</modules>
 
 	<properties>
-		<spring.version>3.1.0.RELEASE</spring.version>
+		<spring.version>3.2.3.RELEASE</spring.version>
 		<zk.version>6.0.1</zk.version>
 		<zk.spring.version>3.1</zk.spring.version>
 		<kettle.version>4.4.0-stable</kettle.version>
@@ -28,6 +28,7 @@
 		<mondrian.version>3.5.0</mondrian.version>	
 		<of-commons-version>0.0.3</of-commons-version>
 		<geotools.version>2.7.5</geotools.version>
+		<jackson.version>2.1.0</jackson.version>
 	</properties>
 
 <!-- 	<profiles> -->
@@ -196,6 +197,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
@@ -345,6 +351,24 @@
 		    	<artifactId>ddlutils</artifactId>
 		    	<version>1.0</version>
 		    </dependency>
+		    
+		    <!-- Jackson JSON mapper -->
+		    <dependency>
+		    	<groupId>com.fasterxml.jackson.core</groupId>
+		    	<artifactId>jackson-core</artifactId>
+		    	<version>${jackson.version}</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>com.fasterxml.jackson.core</groupId>
+		    	<artifactId>jackson-databind</artifactId>
+		    	<version>${jackson.version}</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>com.fasterxml.jackson.core</groupId>
+		    	<artifactId>jackson-annotations</artifactId>
+		    	<version>${jackson.version}</version>
+		    </dependency>
+		    
 		</dependencies>
 	</dependencyManagement>
 
