--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -368,10 +368,31 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1</version>
 		</dependency>
+<!-- 		<dependency>		 -->
+<!-- 			<groupId>net.rforge.rjava</groupId> -->
+<!-- 			<artifactId>rengine</artifactId> -->
+<!-- 			<version>0.9-5</version> -->
+<!-- 		</dependency>		 -->
+<!-- 		<dependency>		 -->
+<!-- 			<groupId>net.rforge.rjava</groupId> -->
+<!-- 			<artifactId>jriengine</artifactId> -->
+<!-- 			<version>0.9-5</version> -->
+<!-- 		</dependency>		 -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>net.rforge</groupId> -->
+<!-- 			<artifactId>jri</artifactId> -->
+<!-- 			<version>0.5-5</version> -->
+<!-- 		</dependency> -->
 		<dependency>
-			<groupId>net.rforge</groupId>
-			<artifactId>jri</artifactId>
-			<version>0.5-5</version>
+		  <groupId>net.rforge.rjava</groupId>
+		  <artifactId>jriengine</artifactId>
+		  <version>0.9-5</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>net.rforge.rjava</groupId>
+		  <artifactId>rengine</artifactId>
+		  <version>0.9-5</version>
 		</dependency>
 	</dependencies>
 </project>
