--- a/pom.xml
+++ b/pom.xml
@@ -369,6 +369,13 @@
 		    	<version>${jackson.version}</version>
 		    </dependency>
 		    
+		    
+		    <dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>3.0-alpha-1</version>
+				<scope>provided</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
