--- a/calc-server/pom.xml
+++ b/calc-server/pom.xml
@@ -68,5 +68,24 @@
 <!-- 			<artifactId>jsr311-api</artifactId> -->
 <!-- 			<version>1.1.1</version> -->
 <!-- 		</dependency> -->
+
+		<!-- Tomcat provided dependencies -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>catalina</artifactId>
+			<version>6.0.36</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>coyote</artifactId>
+			<version>6.0.36</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
