--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -270,6 +270,10 @@
 			<artifactId>collect-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.openforis.collect</groupId>
+			<artifactId>collect-rdb</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.openforis.commons</groupId>
 			<artifactId>commons-collections</artifactId>
 		</dependency>
