--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,11 @@
 				<artifactId>collect-core</artifactId>
 				<version>${collect.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.openforis.collect</groupId>
+				<artifactId>collect-rdb</artifactId>
+				<version>${collect.version}</version>
+			</dependency>
 			
 			<!-- Open Foris Commmons -->
 			<dependency>
