--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -562,5 +562,11 @@
 		  <artifactId>rengine</artifactId>
 		  <version>0.9-5</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
