--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,11 @@
 				<artifactId>spring-security-web</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
-			
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
 			<!-- ZK -->
 			<dependency>
 				<groupId>org.zkoss.zk</groupId>
